# gr-ccsds

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  MANIFEST.md  README.md  ka9q_fec.md  test.txt
apps/latency_measurements/: CMakeLists.txt  ccsds_latency_receiver.cpp  ccsds_latency_sender.cpp
grc/: CMakeLists.txt  ccsds_add_asm.block.yml  ccsds_add_asm.xml  ccsds_blob_msg_sink_b.block.yml  ccsds_blob_msg_sink_b.xml  ccsds_blob_msg_source_b.block.yml  ccsds_blob_msg_source_b.xml  ccsds_block_prefix_bb.block.yml  ccsds_block_prefix_bb.xml  ccsds_byte_to_softbits_bf.block.yml  ccsds_byte_to_softbits_bf.xml  ccsds_constellation_ccsds.xml  ccsds_conv_decode27.block.yml  ccsds_conv_encode27_bb.block.yml  ccsds_dll_cc.block.yml  ccsds_dll_cc.xml  ccsds_doppler_correction_cc.block.yml  ccsds_doppler_correction_cc.xml  ccsds_doppler_correction_cc_file.block.yml  ccsds_doppler_correction_cc_file.xml  ccsds_fll_cc.xml  ccsds_frame_generation_config.xml  ccsds_frame_sync.block.yml  ccsds_frame_sync.xml  ccsds_frame_sync_b.xml  ccsds_frame_sync_bb.xml  ccsds_frame_sync_config.block.yml  ccsds_frame_sync_config.xml  ccsds_frame_sync_config_concatenated.xml  ccsds_framer_sink_dual.xml  ccsds_ldpc_decoder.block.yml  ccsds_ldpc_decoder.xml  ccsds_ldpc_encoder.block.yml  ccsds_local_oscillator_cc.xml  ccsds_message_info.block.yml  ccsds_message_info.xml  ccsds_mpsk_ambiguity_resolver_bb.xml  ccsds_mpsk_ambiguity_resolver_f.block.yml  ccsds_mpsk_ambiguity_resolver_f.xml  ccsds_mpsk_demod2_cb.xml  (+50 more)
include/: CMakeLists.txt  asynchronous_start.hpp  ccsds.h  ccsds_add_asm.h  ccsds_api.h  ccsds_asm_operator.h  ccsds_blob_msg_sink_b.h  ccsds_blob_msg_source_b.h  ccsds_conv_decode27.h  ccsds_conv_encode.h  ccsds_conv_encode27_aux.h  ccsds_conv_encode27_bb.h  ccsds_conv_encode27_punct.h  ccsds_crc16.h  ccsds_dll_cc.h  ccsds_fll_cc.h  ccsds_frame_sync_b.h  ccsds_frame_sync_bb.h  ccsds_framer_sink_dual.h  ccsds_interleaving_aux.h  ccsds_lo_feedback.h  ccsds_local_oscillator_cc.h  ccsds_lpf.h  ccsds_lpf2.h  ccsds_moving_average.h  ccsds_mpsk_ambiguity_resolver_bb.h  ccsds_mpsk_ambiguity_resolver_f.h  ccsds_mpsk_demod2_cb.h  ccsds_mpsk_demod_cb.h  ccsds_mpsk_detector_soft_cf.h  ccsds_mpsk_mod_bc.h  ccsds_mpsk_preamble_cc.h  ccsds_msg_blob_sink_b.h  ccsds_msg_blob_source_b.h  ccsds_msg_copy.h  ccsds_msg_null_src.h  ccsds_msg_source.h  ccsds_pll_cc.h  ccsds_randomiser.h  ccsds_randomiser_bb.h  (+20 more)
include/ccsds/: CMakeLists.txt  add_asm.h  api.h  asm_header.h  asm_position.h  blob_msg_sink_b.h  blob_msg_source_b.h  block_prefix_bb.h  byte_to_softbits_bf.h  constellation_ccsds_bpsk.h  constellation_ccsds_qpsk.h  constellation_ccsds_qpsk_axis.h  conv_decode27.h  conv_encode27_bb.h  conv_puncturing27.h  decoder_verbosity.h  discriminator.h  dll_cc.h  doppler_correction_cc.h  exceptions.h  frame_generation_config.h  frame_sync.h  frame_sync_config.h  ldpc.h  ldpc_decoder.h  ldpc_encoder.h  message_info.h  mpsk_ambiguity_resolver_f.h  mpsk_detector_soft_cf.h  mpsk_mod_bc.h  mpsk_preamble_cc.h  msg_null_src.h  pack_bit_to_bytes.h  pll_cc.h  randomiser.h  randomiser_softbits.h  reversebits.h  rs_decode.h  rs_encode.h  simple_bpsk_SNR_qf.h  (+16 more)
include/gnuradio/ccsds/: CMakeLists.txt  add_asm.h  asm_header.h  asm_position.h  blob_msg_sink_b.h  blob_msg_source_b.h  block_prefix_bb.h  byte_to_softbits_bf.h  constellation_ccsds_bpsk.h  constellation_ccsds_qpsk.h  constellation_ccsds_qpsk_axis.h  conv_decode27.h  conv_encode27_bb.h  conv_puncturing27.h  decoder_verbosity.h  discriminator.h  dll_cc.h  doppler_correction_cc.h  exceptions.h  frame_generation_config.h  frame_sync.h  frame_sync_config.h  ldpc_decoder.h  ldpc_encoder.h  message_info.h  mpsk_ambiguity_resolver_f.h  mpsk_detector_soft_cf.h  mpsk_mod_bc.h  mpsk_preamble_cc.h  msg_null_src.h  pack_bit_to_bytes.h  pll_cc.h  randomiser.h  randomiser_softbits.h  reversebits.h  rs_decode.h  rs_encode.h  snr.h  snr_est.h  snr_estimation_cf.h  (+10 more)
lib/: CMakeLists.txt  add_asm_impl.cc  add_asm_impl.h  asm_header.cc  asm_position.cc  asynchronous_start.cc  asynchronous_start.hpp  blob_msg_sink_b_impl.cc  blob_msg_sink_b_impl.h  blob_msg_source_b_impl.cc  blob_msg_source_b_impl.h  block_prefix_bb_impl.cc  block_prefix_bb_impl.h  byte_to_softbits_bf_impl.cc  byte_to_softbits_bf_impl.h  ccsds_add_asm.cc  ccsds_blob_msg_sink_b.cc  ccsds_blob_msg_source_b.cc  ccsds_conv_decode27.cc  ccsds_conv_encode27_aux.cc  ccsds_conv_encode27_bb.cc  ccsds_conv_encode27_punct.cc  ccsds_crc16.cc  ccsds_dll_cc.cc  ccsds_fll_cc.cc  ccsds_frame_sync_b.cc  ccsds_frame_sync_bb.cc  ccsds_framer_sink_dual.cc  ccsds_framer_sink_dual.cc~  ccsds_globals.c  ccsds_hexstring_to_binary.h  ccsds_local_oscillator_cc.cc  ccsds_lpf.cc  ccsds_lpf2.cc  ccsds_moving_average.cc  ccsds_mpsk_ambiguity_resolver_bb.cc  ccsds_mpsk_ambiguity_resolver_f.cc  ccsds_mpsk_constellation.h  ccsds_mpsk_demod2_cb.cc  ccsds_mpsk_demod_cb.cc  (+166 more)
lib/sgp4/: ABOUT.txt  sgp4tle.cpp  sgp4tle.h  sgp4unit.cpp
python/ccsds/bindings/: CMakeLists.txt  add_asm_python.cc  asm_header_python.cc  asm_position_python.cc  blob_msg_sink_b_python.cc  blob_msg_source_b_python.cc  block_prefix_bb_python.cc  byte_to_softbits_bf_python.cc  constellation_ccsds_bpsk_python.cc  constellation_ccsds_qpsk_axis_python.cc  constellation_ccsds_qpsk_python.cc  conv_decode27_python.cc  conv_encode27_bb_python.cc  conv_puncturing27_python.cc  decoder_verbosity_python.cc  dll_cc_python.cc  doppler_correction_cc_python.cc  failed_conversions.txt  frame_generation_config_python.cc  frame_sync_config_python.cc  frame_sync_python.cc  ldpc_decoder_python.cc  ldpc_encoder_python.cc  ldpc_python.cc  message_info_python.cc  mpsk_ambiguity_resolver_f_python.cc  mpsk_detector_soft_cf_python.cc  mpsk_mod_bc_python.cc  mpsk_preamble_cc_python.cc  msg_null_src_python.cc  pack_bit_to_bytes_python.cc  pll_cc_python.cc  python_bindings.cc  randomiser_python.cc  randomiser_softbits_python.cc  reversebits_python.cc  rs_decode_python.cc  rs_encode_python.cc  snr_est_python.cc  snr_estimation_cf_python.cc  (+11 more)
python/ccsds/bindings/docstrings/: add_asm_pydoc_template.h  (+46 more)
(+171 files in other folders)
